--- a/frontend/src/containers/styles/Covid19Styles.css
+++ b/frontend/src/containers/styles/Covid19Styles.css
@@ -1,3 +1,18 @@
 .covid {
-    width: 98vw;
+    width: 100vw;
+    height: 65vh;
+}
+
+.text-wrapper {
+    padding: 30px;
+}
+
+.para {
+    margin: 20px 0 60px 0;
+}
+
+.covid-title {
+    text-transform: capitalize;
+    text-align: center;
+    margin: 40px 0;
 }
